# DukTape9001

./: README.md  building.txt  desktop_build.sh  desktop_run.sh  userdimensions.cpp
3dmodel/: pipimiarmleft.mtl  pipimiheadbody.mtl  pipimirightarm.mtl
Audio_Clip/Korra/: .gitignore  Makefile  dictionary.txt  korra  korra.c  korra.dic  korra.lm  stringsplitter.c
desktop_src/: '  CMakeLists.txt  \  main.cpp  userdimensions.cpp  userdimensions.hpp
test_data/: testmovie.avi
voice/: Makefile  StringSplitter.c  korra  korra.c  stringsplitter.exe.stackdump
